Parser/test_cases/bad/letbadtype.cl
class Hello {

   foo:Int <- 89;
   bar:Int;
   
   foo(a:Int, b:Int, c:String): Int  {
      let a : int <- 4 in a + c  
   };
   
   bar() :Int {
      6
   };
   
   
};
